--- a/DemoFhirNexusMultiTenancy/DemoFhirNexusMultiTenancy/DemoFhirNexusMultiTenancy.csproj
+++ b/DemoFhirNexusMultiTenancy/DemoFhirNexusMultiTenancy/DemoFhirNexusMultiTenancy.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Ihis.FhirEngine.WebApi.Extensions.AuditLogging.Serilog" Version="4.2.0" />
         <PackageReference Include="Ihis.FhirEngine.WebApi.Extensions.Swashbuckle" Version="4.2.0" />
         <PackageReference Include="Ihis.FhirEngine.WebApi.R4" Version="4.2.0" />
+        <PackageReference Include="Ihis.FhirEngine.WebApi.Extensions.Multitenancy" Version="4.2.0" />
     </ItemGroup>
 
     <ItemGroup>
