--- a/DemoFhirNexusMultiTenancy/DemoFhirNexusMultiTenancy/appsettings.json
+++ b/DemoFhirNexusMultiTenancy/DemoFhirNexusMultiTenancy/appsettings.json
@@ -12,21 +12,21 @@
       }
     }
   },
-  "AllowedHosts": "*",
-  "Security": {
-    "Tenants": [
-      {
-        "TenantId": "4C618DFEF3CC458FB2BA475E86D6E6B0",
-        "Path": "4C618DFEF3CC458FB2BA475E86D6E6B0",
-        "ShortId": 1,
-        "ApiKey": "abcdefghij"
-      },
-      {
-        "TenantId": "FE406148A2E24426BC6631E9411A3034",
-        "Path": "FE406148A2E24426BC6631E9411A3034",
-        "ShortId": 2,
-        "ApiKey": "1234567890"
-      }
-    ]
-  }
+  "AllowedHosts": "*"
+  //"Security": {
+  //  "Tenants": [
+  //    {
+  //      "TenantId": "4C618DFEF3CC458FB2BA475E86D6E6B0",
+  //      "Path": "4C618DFEF3CC458FB2BA475E86D6E6B0",
+  //      "ShortId": 1,
+  //      "ApiKey": "abcdefghij"
+  //    },
+  //    {
+  //      "TenantId": "FE406148A2E24426BC6631E9411A3034",
+  //      "Path": "FE406148A2E24426BC6631E9411A3034",
+  //      "ShortId": 2,
+  //      "ApiKey": "1234567890"
+  //    }
+  //  ]
+  //}
 }
